--- a/src/com/reproductor/vistas/paneles/pnlHome.form
+++ b/src/com/reproductor/vistas/paneles/pnlHome.form
@@ -663,7 +663,7 @@
             <Container class="javax.swing.JPanel" name="pnlIngresoCentro">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="66" green="33" red="ff" type="rgb"/>
+                  <Color blue="12" green="12" red="12" type="rgb"/>
                 </Property>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[1200, 800]"/>
